# openapi/kubepuppy.yaml
@@ -1,20 +1,7 @@
 openapi: 3.0.0
 info:
-  description: >-
-    This is a sample server Petstore server. For this sample, you can use the api key
-    `special-key` to test the authorization filters.
   version: 1.0.0
-  title: OpenAPI Petstore
-  license:
-    name: Apache-2.0
-    url: 'https://www.apache.org/licenses/LICENSE-2.0.html'
-tags:
-  - name: pet
-    description: Everything about your Pets
-  - name: store
-    description: Access to Petstore orders
-  - name: user
-    description: Operations about user
+  title: KubePuppy API
 paths:
   /certificate/validate:
     post:
@@ -32,6 +19,37 @@ paths:
                 $ref: '#/components/schemas/Pet'
       requestBody:
         $ref: '#/components/requestBodies/CertificateUpload'
+  /subjects:
+    get:
+      tags:
+        - subject
+      summary: Lists all subjects
+      description: Returns a single pet
+      operationId: getClusterRoleBinding
+      parameters:
+        - name: roleBindingId
+          in: roleBindingId
+          description: ID of pet to return
+          required: true
+          schema:
+            type: integer
+            format: int64
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/xml:
+              schema:
+                $ref: '#/components/schemas/Pet'
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Pet'
+        '400':
+          description: Invalid ID supplied
+        '404':
+          description: Pet not found
+      security:
+        - api_key: []
   '/clusterRoleBinding/{roleBindingId}':
     get:
       tags:
@@ -483,50 +501,47 @@ components:
           type: boolean
           description: "A list of all "
           required: true
-    ClusterRoleBinding:
+    Subject:
       type: object
       properties:
-        name:
+        qualifiedName:
           type: string
-    ClusterSubject:
-      type: object
-      properties:
+          required: true
+          description: "The full, unambiguous name of this subject"
         kind:
           type: string
           enum: [User, Group, ServiceAccount]
-
-
-
-
-    Order:
-      title: Pet Order
-      description: An order for a pets from the pet store
+          required: true
+        name:
+          type: string
+          required: true
+        namespace:
+          type: string
+          description: "For a ServiceAccount, the account namespace. Null for Users and Groups"
+        roles:
+          type: array
+          required: true
+          items:
+            $ref: '#/components/schemas/SubjectRole'
+            required: true
+          description: "For a ServiceAccount, the account namespace. Null for Users and Groups"
+    SubjectRole:
       type: object
       properties:
-        id:
-          type: integer
-          format: int64
-        petId:
-          type: integer
-          format: int64
-        quantity:
-          type: integer
-          format: int32
-        shipDate:
+        qualifiedName:
           type: string
-          format: date-time
-        status:
+          required: true
+          description: "The full, unambiguous name of this subject"
+        kind:
           type: string
-          description: Order Status
-          enum:
-            - placed
-            - approved
-            - delivered
-        complete:
-          type: boolean
-          default: false
-      xml:
-        name: Order
+          enum: [User, Group, ServiceAccount]
+          required: true
+        name:
+          type: string
+          required: true
+        namespace:
+          type: string
+          description: "For a ServiceAccount, the account namespace. Null for Users and Groups"
     Category:
       title: Pet category
       description: A category for a pet
