# out/go/go/routers.go
@@ -1,0 +1,199 @@
+/*
+ * OpenAPI Petstore
+ *
+ * This is a sample server Petstore server. For this sample, you can use the api key `special-key` to test the authorization filters.
+ *
+ * API version: 1.0.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+import (
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+// Route is the information for every URI.
+type Route struct {
+	// Name is the name of this Route.
+	Name        string
+	// Method is the string for the HTTP method. ex) GET, POST etc..
+	Method      string
+	// Pattern is the pattern of the URI.
+	Pattern     string
+	// HandlerFunc is the handler function of this route.
+	HandlerFunc gin.HandlerFunc
+}
+
+// Routes is the list of the generated Route.
+type Routes []Route
+
+// NewRouter returns a new router.
+func NewRouter() *gin.Engine {
+	router := gin.Default()
+	for _, route := range routes {
+		switch route.Method {
+		case http.MethodGet:
+			router.GET(route.Pattern, route.HandlerFunc)
+		case http.MethodPost:
+			router.POST(route.Pattern, route.HandlerFunc)
+		case http.MethodPut:
+			router.PUT(route.Pattern, route.HandlerFunc)
+		case http.MethodPatch:
+			router.PATCH(route.Pattern, route.HandlerFunc)
+		case http.MethodDelete:
+			router.DELETE(route.Pattern, route.HandlerFunc)
+		}
+	}
+
+	return router
+}
+
+// Index is the index handler.
+func Index(c *gin.Context) {
+	c.String(http.StatusOK, "Hello World!")
+}
+
+var routes = Routes{
+	{
+		"Index",
+		http.MethodGet,
+		"/",
+		Index,
+	},
+
+	{
+		"ValidateCertificate",
+		http.MethodPost,
+		"/certificate/validate",
+		ValidateCertificate,
+	},
+
+	{
+		"DeletePet",
+		http.MethodDelete,
+		"/pet/:petId",
+		DeletePet,
+	},
+
+	{
+		"FindPetsByStatus",
+		http.MethodGet,
+		"/pet/findByStatus",
+		FindPetsByStatus,
+	},
+
+	{
+		"FindPetsByTags",
+		http.MethodGet,
+		"/pet/findByTags",
+		FindPetsByTags,
+	},
+
+	{
+		"GetPetById",
+		http.MethodGet,
+		"/pet/:petId",
+		GetPetById,
+	},
+
+	{
+		"UpdatePetWithForm",
+		http.MethodPost,
+		"/pet/:petId",
+		UpdatePetWithForm,
+	},
+
+	{
+		"UploadFile",
+		http.MethodPost,
+		"/pet/:petId/uploadImage",
+		UploadFile,
+	},
+
+	{
+		"DeleteOrder",
+		http.MethodDelete,
+		"/store/order/:orderId",
+		DeleteOrder,
+	},
+
+	{
+		"GetInventory",
+		http.MethodGet,
+		"/store/inventory",
+		GetInventory,
+	},
+
+	{
+		"GetOrderById",
+		http.MethodGet,
+		"/store/order/:orderId",
+		GetOrderById,
+	},
+
+	{
+		"PlaceOrder",
+		http.MethodPost,
+		"/store/order",
+		PlaceOrder,
+	},
+
+	{
+		"CreateUser",
+		http.MethodPost,
+		"/user",
+		CreateUser,
+	},
+
+	{
+		"CreateUsersWithArrayInput",
+		http.MethodPost,
+		"/user/createWithArray",
+		CreateUsersWithArrayInput,
+	},
+
+	{
+		"CreateUsersWithListInput",
+		http.MethodPost,
+		"/user/createWithList",
+		CreateUsersWithListInput,
+	},
+
+	{
+		"DeleteUser",
+		http.MethodDelete,
+		"/user/:username",
+		DeleteUser,
+	},
+
+	{
+		"GetUserByName",
+		http.MethodGet,
+		"/user/:username",
+		GetUserByName,
+	},
+
+	{
+		"LoginUser",
+		http.MethodGet,
+		"/user/login",
+		LoginUser,
+	},
+
+	{
+		"LogoutUser",
+		http.MethodGet,
+		"/user/logout",
+		LogoutUser,
+	},
+
+	{
+		"UpdateUser",
+		http.MethodPut,
+		"/user/:username",
+		UpdateUser,
+	},
+}
